--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harry Potter Fanpage</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
 
@@ -16,24 +16,24 @@
 
     </header>
 
-    <!-- About Section -->
+<!-- About Section -->
     <section id="about">
-        <h2>About Harry Potter</h2>
-        <p>The Harry Potter series is a collection of fantasy novels written by J.K. Rowling. It follows the life of a young wizard, Harry Potter, and his adventures at Hogwarts School of Witchcraft and Wizardry.</p>
-        <p>It includes 7 books and 8 movies, creating a worldwide cultural phenomenon.</p>
+    <h2>About Harry Potter</h2>
+    <p>The Harry Potter series is a collection of fantasy novels written by J.K. Rowling. It follows the life of a young wizard, Harry Potter, and his adventures at Hogwarts School of Witchcraft and Wizardry.</p>
+    <p>It includes 7 books and 8 movies, creating a worldwide cultural phenomenon.</p>
     </section>
 
-    <!-- Interactive Buttons -->
+<!-- Interactive Buttons -->
     <section class="interactive-buttons">
-        <h3>Explore More:</h3>
-        <button onclick="window.location.href='books.html'">Books</button>
-        <button onclick="window.location.href='movies.html'">Movies</button>
-        <button onclick="window.location.href='gallery.html'">Gallery</button>
+    <h3>Explore More:</h3>
+    <button onclick="window.location.href='books.html'">Books</button>
+    <button onclick="window.location.href='movies.html'">Movies</button>
+    <button onclick="window.location.href='gallery.html'">Gallery</button>
     </section>
 
-    <!-- Footer -->
+<!-- Footer -->
     <footer>
-        <p>&copy; 2025 Harry Potter Fanpage. All rights reserved.</p>
+    <p>&copy; 2025 Harry Potter Fanpage. All rights reserved.</p>
     </footer>
 
 </body>
