gi change nako ang footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <!-- Footer -->
     <footer>
-    <p>&copy; 2025 Harry Potter Fanpage. All rights reserved.</p>
+    <p>&copy; Mischief Managed </p>
     </footer>
 
 </body>
