--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Harry Potter Gallery</title>
-    <link rel="stylesheet" href="C:\Users\USER\Desktop\style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
