gi finalize na nako ang gallery

--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
     <!-- Gallery Section -->
     <section id="gallery">
         <h2>Harry Potter Movie Gallery</h2>
-        <p>Explore a collection of images from the magical world of Harry Potter. Click on any image to view it in full size.</p>
+        <p><center>Explore a collection of images from the magical world of Harry Potter.</p></center>
 
         <!-- Gallery Container -->
         <div class="gallery-container">
