finalization sa gallery and little additional sa css

--- a/gallery.html
+++ b/gallery.html
@@ -88,12 +88,12 @@
                 <p>The epic conclusion to the battle between good and evil, with the final confrontation between Harry and Voldemort.</p>
             </div>
         </div>
+        </section>
 
     
     <!-- Footer -->
-    <footer>
-        <p>&copy; Mischief Managed.</p>
-    </footer>
-
+  <footer>
+    <p>&copy; Mischief Managed.</p>
+  </footer>
 </body>
 </html>
