--- a/gallery.html
+++ b/gallery.html
@@ -11,18 +11,10 @@
 
     <!-- Header -->
     <header>
-        <div class="logo">
-            <img src="harry_potter_logo.png" alt="Harry Potter Logo" width="150">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="books.html" class="interactive">Books</a></li>
-                <li><a href="movies.html" class="interactive">Movies</a></li>
-                <li><a href="gallery.html" class="interactive">Gallery</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="logo">
+      <img src="assets/img/harry_potter_logo.png" alt="Harry Potter Logo" width="180">
+    </div>
+  </header>
 
     <!-- Gallery Section -->
     <section id="gallery">
