--- a/gallery.html
+++ b/gallery.html
@@ -10,20 +10,11 @@
 <body>
 
     <!-- Header -->
-<<<<<<< HEAD
-    <header>
-=======
-     <header>
->>>>>>> main
-    <div class="logo">
-      <img src="assets/img/harry_potter_logo.png" alt="Harry Potter Logo" width="180">
-    </div>
-  </header>
 
-    <!-- Gallery Section -->
+     <header>
     <section id="gallery">
         <h2>Harry Potter Movie Gallery</h2>
-        <p><center>Explore a collection of images from the magical world of Harry Potter.</p></center>
+        <p>Explore a collection of images from the magical world of Harry Potter.</p>
 
         <!-- Gallery Container -->
         <div class="gallery-container">
@@ -91,5 +82,6 @@
   <footer>
     <p>&copy; Mischief Managed.</p>
   </footer>
+  
 </body>
 </html>
