wala nako kasabot huhu

--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
      <header>
     <section id="gallery">
         <h2>Harry Potter Movie Gallery</h2>
-        <p>Explore a collection of images from the magical world of Harry Potter.</p>
+        <p><center>Explore a collection of images from the magical world of Harry Potter.</p> </center>
 
         <!-- Gallery Container -->
         <div class="gallery-container">
@@ -75,8 +75,6 @@
                 <p>The epic conclusion to the battle between good and evil, with the final confrontation between Harry and Voldemort.</p>
             </div>
         </div>
-        </section>
-
     
     <!-- Footer -->
   <footer>
