final changes before sa change ni arcel

--- a/gallery.html
+++ b/gallery.html
@@ -83,7 +83,7 @@
     
     <!-- Footer -->
   <footer>
-    <p>&copy; Mischief Managed.</p>
+    <p>&copy; Mischief Managed ⚡</p>
   </footer>
   
 </body>
