Add back button and update movies posters

--- a/movies.html
+++ b/movies.html
@@ -56,5 +56,11 @@
     </div>
   </section>
 
+   <!-- Back to Main Button -->
+    <div class="back-btn">
+      <a href="index.html">⬅ Back to Main</a>
+    </div>
+  </section>
+  
 </body>
 </html>
