Add back to main button at top of movies page

--- a/movies.html
+++ b/movies.html
@@ -10,6 +10,11 @@
 
   <!-- Movies Section -->
   <section id="movies">
+    <!-- Back to Main Button -->
+  <div class="back-btn top">
+    <a href="index.html">⬅ Back to Main</a>
+  </div>
+  
     <h2>Harry Potter Movies</h2>
     <p>Explore the magical world of Harry Potter through the movies.</p>
 
@@ -54,7 +59,6 @@
         <p>Harry Potter and the Deathly Hallows – Part 2 (2011)</p>
       </div>
     </div>
-  </section>
 
    <!-- Back to Main Button -->
     <div class="back-btn">
