--- a/gallery.html
+++ b/gallery.html
@@ -80,10 +80,12 @@
             </div>
         </div>
   
-    
+      <div class="back-btn">
+      <a href="index.html">⬅ Back to Main</a>
+    </div>
     <!-- Footer -->
   <footer>
-    <p>&copy; Mischief Managed.</p>
+    <p>Mischief Managed ⚡</p>
   </footer>
   
 </body>
