finalize gallery and button

--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,11 @@
                 <p>The epic conclusion to the battle between good and evil, with the final confrontation between Harry and Voldemort.</p>
             </div>
         </div>
+        </section>
   
+         <div class="back-btn">
+      <a href="index.html">⬅ Back to Main</a>
+    </div>
     
     <!-- Footer -->
   <footer>
